--- a/assets/sass/partials/layout/_heading-book.scss
+++ b/assets/sass/partials/layout/_heading-book.scss
@@ -15,7 +15,7 @@
     //bottom: -9999px;
     width: 20px;
     height: 30px;
-    background: rgba($white,1);
+    background: rgba($info-section-background,0.05);
     border: 2px solid $info-section-background;
     border-left: 0;
     transform-origin: 0% 50%;
