Profile Photo + Banner animation bugs removed

--- a/assets/sass/partials/layout/_contact.scss
+++ b/assets/sass/partials/layout/_contact.scss
@@ -1,5 +1,9 @@
 // CSS Styling of the Contact Section of the CV
 
+.block-contact{
+  position: relative;
+}
+
 // Dividing up the space of "UL" into equal dimension grid rows for "LI" elements
 .info {
 
