--- a/assets/sass/partials/utilities/_variables.scss
+++ b/assets/sass/partials/utilities/_variables.scss
@@ -11,7 +11,7 @@ $hobbies-onclick-color: #ffee10; //light yellow
 $banner-left-text: #ffdc2a;  //shade of yellow
 $soc-btn-sides: #b1b1b1; //light grey
 $contact-icons: #331a00;//dark coffee
-$font-stack-primary: "'Roboto',sans-serif";
+$font-stack-primary: 'Roboto',sans-serif;
 
 $animation-banner: -2500%;
 
