--- a/assets/sass/partials/layout/_header.scss
+++ b/assets/sass/partials/layout/_header.scss
@@ -10,15 +10,12 @@ header .profile{
         height: 13.7px;
         border-radius: 20%;
         border: solid .4px #000;
-        background: url("../assets/images/self/ashok9.jpg");
+        background: url("ashok9.jpg");
         background-size: 320px;
         background-position: 31% 0;
         background-attachment: fixed;
-        background-repeat: no-repeat;
-        }
-
-      }
-
+   }
+ }
 // CSS Styling of the circled Photo Section of the CV
 
  header .avatar {
